vsscala2/code/PatternMatching/output/ThingsAcceptor2.output
/Users/venkats/books/vsscala2/Book/code/PatternMatching/ThingsAcceptor2.sca
la:21: error: type mismatch;
 found   : this.Apple.type
 required: this.Thing
ThingsAcceptor.acceptStuff(Apple)
                           ^
one error found
